# AutoHR

./: .gitignore  .travis.yml  CMakeLists.txt  CatchTest_Mail_Class.cpp  HRDB.xml  Mail_Class.cpp  Mail_Recv.h  Mail_Send.cpp  Project Diagram.xml  README.md  Selections.xml  Untitled Diagram (15).xml  Untitled Diagram.xml  catch.cpp  catch.hpp  fullUML.xml  main.cpp  parser.cpp  parser.h  rezume.cpp  rezume.h
Selector/: CMakeLists.txt  Candidate.cpp  Candidate.hpp  CatchTest.cpp  Skill.cpp  Skill.hpp  User.cpp  User.hpp  Vacancy.cpp  Vacancy.hpp  main.cpp
Selector/AddVacancy/CreateVacancy/: mainwindow.cpp  mainwindow.ui
sourceCode/: CMakeLists.txt  DBChecker.cpp  DBController.cpp  DataBase.cpp  DataBase.h  DataBaseConnection.h  DataBaseController.h  HRDataBaseController.cpp  main.cpp  rezume.h
sourceCode/DataBase/: DataBaseConnection.cpp  DataBaseController.cpp  HRDataBaseController.cpp
sourceCode/Mail/: Mail_Class.cpp  Mail_Client.h  Mail_Recv.cpp  Mail_Recv.h  Mail_Send.cpp  Mail_Send.h
sourceCode/Parser/: parser.h
sourceCode/Selector/: Candidate.cpp  Candidate.hpp  User.cpp  User.hpp  Vacancy.cpp  Vacancy.hpp
sourceCode/Selector/AddVacancy/CreateVacancy/: main.cpp  mainwindow.h  new_vac.ui  new_vacancy.cpp  new_vacancy.h  new_vacancy.ui  vacancy.cpp
sourceCode/Tests/: CatchTest_Mail_Class.cpp  catch.cpp
